fix: add new styling for rowheight post to align all info text to top of the post info block

--- a/styles/_posts.scss
+++ b/styles/_posts.scss
@@ -13,7 +13,7 @@
 .post{
     display: grid;
     grid-template-columns: 1fr;
-    /* grid-template-rows: 2fr 1fr; */
+    grid-template-rows: 410px;
     justify-items: flex-start;
     align-items: flex-start;
     background-color: var(--primary);
@@ -45,7 +45,7 @@
 
 .post__img{
     width: 100%;
-    height: 400px;
+    height: 410px;
     object-fit: cover;
     border: 5px solid var(--secondary);
     z-index: 0;
@@ -103,7 +103,7 @@
 .post__info{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     margin: 1rem;
     color: var(--black);
