--- a/styles/style.css
+++ b/styles/style.css
@@ -861,7 +861,8 @@ footer {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  /* grid-template-rows: 2fr 1fr; */
+  -ms-grid-rows: 410px;
+      grid-template-rows: 410px;
   justify-items: flex-start;
   -webkit-box-align: start;
       -ms-flex-align: start;
@@ -905,7 +906,7 @@ footer {
 
 .post__img {
   width: 100%;
-  height: 400px;
+  height: 410px;
   -o-object-fit: cover;
      object-fit: cover;
   border: 5px solid var(--secondary);
@@ -978,9 +979,9 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
